// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Route Link matches snapshot (Link | disabled) 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: var(--border-radius);
  color: #8FCEF0;
  cursor: default;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 0.875rem;
  line-height: 1.5rem;
  padding: 4px;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0:not(:focus-visible) {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c0:focus-visible {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c1 svg {
  height: 1rem;
  margin-right: var(--spacing-1x);
  width: 1rem;
}

.c1[disabled] {
  pointer-events: none;
}

<a
  aria-disabled="true"
  class="c0 c1"
  disabled=""
  href="/test"
  tabindex="-1"
>
  Navigation Link
</a>
`;

exports[`Route Link matches snapshot (Link | label and icon) 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: var(--border-radius);
  color: #006296;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 0.875rem;
  line-height: 1.5rem;
  padding: 4px;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0:hover {
  color: #003A5A;
}

.c0:visited {
  color: #602FA0;
}

.c0:not(:focus-visible) {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c0:focus-visible {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c1 svg {
  height: 1rem;
  margin-right: var(--spacing-1x);
  width: 1rem;
}

.c1:visited svg {
  color: #602FA0;
}

.c1[disabled] {
  pointer-events: none;
}

<a
  class="c0 c1"
  href="/test"
  tabindex="0"
>
  <svg
    aria-hidden="true"
    color="currentColor"
    focusable="false"
    height="16"
    width="16"
  />
  Navigation Link
</a>
`;

exports[`Route Link matches snapshot (Link | only icon) 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: var(--border-radius);
  color: #006296;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 0.875rem;
  line-height: 1.5rem;
  padding: 4px;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0:hover {
  color: #003A5A;
}

.c0:visited {
  color: #602FA0;
}

.c0:not(:focus-visible) {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c0:focus-visible {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c1 svg {
  height: 1rem;
  margin-right: 0;
  width: 1rem;
}

.c1:visited svg {
  color: #602FA0;
}

.c1[disabled] {
  pointer-events: none;
}

<a
  class="c0 c1"
  href="/test"
  tabindex="0"
>
  <svg
    aria-hidden="true"
    color="currentColor"
    focusable="false"
    height="16"
    width="16"
  />
</a>
`;

exports[`Route Link matches snapshot (Link) 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: var(--border-radius);
  color: #006296;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 0.875rem;
  line-height: 1.5rem;
  padding: 4px;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0:hover {
  color: #003A5A;
}

.c0:visited {
  color: #602FA0;
}

.c0:not(:focus-visible) {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c0:focus-visible {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c1 svg {
  height: 1rem;
  margin-right: var(--spacing-1x);
  width: 1rem;
}

.c1:visited svg {
  color: #602FA0;
}

.c1[disabled] {
  pointer-events: none;
}

<a
  class="c0 c1"
  href="/test"
  tabindex="0"
>
  Navigation Link
</a>
`;

exports[`Route Link matches snapshot (NavLink | disabled) 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: var(--border-radius);
  color: #8FCEF0;
  cursor: default;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 0.875rem;
  line-height: 1.5rem;
  padding: 4px;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0:not(:focus-visible) {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c0:focus-visible {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c1 svg {
  height: 1rem;
  margin-right: var(--spacing-1x);
  width: 1rem;
}

.c1[disabled] {
  pointer-events: none;
}

<a
  aria-disabled="true"
  class="c0 c1"
  disabled=""
  href="/test"
  tabindex="-1"
>
  Navigation Link
</a>
`;

exports[`Route Link matches snapshot (NavLink | label and icon) 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: var(--border-radius);
  color: #006296;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 0.875rem;
  line-height: 1.5rem;
  padding: 4px;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0:hover {
  color: #003A5A;
}

.c0:visited {
  color: #602FA0;
}

.c0:not(:focus-visible) {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c0:focus-visible {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c1 svg {
  height: 1rem;
  margin-right: var(--spacing-1x);
  width: 1rem;
}

.c1:visited svg {
  color: #602FA0;
}

.c1[disabled] {
  pointer-events: none;
}

<a
  class="c0 c1"
  href="/test"
  tabindex="0"
>
  <svg
    aria-hidden="true"
    color="currentColor"
    focusable="false"
    height="16"
    width="16"
  />
  Navigation Link
</a>
`;

exports[`Route Link matches snapshot (NavLink | only icon) 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: var(--border-radius);
  color: #006296;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 0.875rem;
  line-height: 1.5rem;
  padding: 4px;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0:hover {
  color: #003A5A;
}

.c0:visited {
  color: #602FA0;
}

.c0:not(:focus-visible) {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c0:focus-visible {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c1 svg {
  height: 1rem;
  margin-right: 0;
  width: 1rem;
}

.c1:visited svg {
  color: #602FA0;
}

.c1[disabled] {
  pointer-events: none;
}

<a
  class="c0 c1"
  href="/test"
  tabindex="0"
>
  <svg
    aria-hidden="true"
    color="currentColor"
    focusable="false"
    height="16"
    width="16"
  />
</a>
`;

exports[`Route Link matches snapshot (NavLink) 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: var(--border-radius);
  color: #006296;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 0.875rem;
  line-height: 1.5rem;
  padding: 4px;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0:hover {
  color: #003A5A;
}

.c0:visited {
  color: #602FA0;
}

.c0:not(:focus-visible) {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c0:focus-visible {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c1 svg {
  height: 1rem;
  margin-right: var(--spacing-1x);
  width: 1rem;
}

.c1:visited svg {
  color: #602FA0;
}

.c1[disabled] {
  pointer-events: none;
}

<a
  class="c0 c1"
  href="/test"
  tabindex="0"
>
  Navigation Link
</a>
`;
